# brest

./: .env  .gitignore  README.md  ai.py  azureai.py  config.py  crud.py  database.py  dbapi.py  genaiapi.py  genaiapi_config.json  genaiapi_keys.json  genaiapi_models.json  genaiappi_models_utils.py  geojsontypes.py  gis.py  gis_clustering_config.json  main.py  mapping.py  models.py  mygis.py  practicemcp.py  pyproject.toml  requirements.txt  schemas.py  security.py  test_brest_examples.py  test_dbapi.py  test_genaiapi.py  test_gis.py  test_mygis.py  test_utils.py  test_webscraping.py  utils.py  webscraping.py
app/: index.html
sample/: sample.json  sample.txt  sample.xml  sample_speech.txt
static/: dummy.json
